# macstrop

./: .gitignore  README  README.md
Conf/: archive_sites.conf  macports.conf  pubkeys.conf  sources.conf  stats.conf  variants.conf
Hooks/: post-checkout
Soup/Tureen/: _resources
Soup/VLC/: Portfile
_obsolete,upstreamed_/kdevplatform5/: Portfile
_obsolete,upstreamed_/qca-cute5/: Portfile
_obsolete,upstreamed_/qca-gnupg/: Portfile
_obsolete,upstreamed_/qca-ossl/: Portfile
_obsolete,upstreamed_/qt4-mac-old/: Portfile
_obsolete,upstreamed_/qt5-kde-devel/: Portfile
_obsolete,upstreamed_/qt5-mac/: Portfile  mcallhun-corrected.Portfile
_obsolete,upstreamed_/qt5-mac-angel/: Portfile  Portfile.qt5  Portfile.qt5.bak  files
_obsolete,upstreamed_/qt5-mac-devel/: Portfile
aqua/charm/: Portfile
aqua/fltk/: Portfile
aqua/qt4-mac/: Portfile  (+1 more)
aqua/qt4-mac-devel/: Portfile  Portfile.hdr  Portfile.qt487  archive.sh
aqua/qt4-mac-devel-mysql55-plugin/: Portfile
aqua/qt5-kde-devel/files/qt593/: all-examples.pro  disable-generic-plugin-when-others-available.patch  dont-warn-missing-fallback-fonts.patch  fix-qstandardpaths-headerspri.patch  patch-backport-corelib-io-109.diff  patch-clangconf.diff  patch-configurejsons.diff  patch-disable-bearer-109.diff  patch-empty-qregexpeng-cache-early.diff  patch-enable-dumpObjectInfo.diff  patch-enable-qgenericunixthemes.diff  patch-fix-build-when-system-freetype-is-detected.diff  patch-freetype-gamma-cocoa.diff  patch-improve-fallback-fullscreen-mode.diff  patch-improve-fontweight-support9.diff  patch-keyboard-support-menukey.diff  patch-lookup-css-monospace-font.diff  patch-macstyle-build-on-109.diff  patch-no-icons-in-menus.diff  patch-no-pulseaudio+gstreamer.diff  patch-printpreview-pdf-export.diff  patch-qFatal-no-abort.diff  patch-qcocoa-add-aqua-themehint.diff  patch-qcocoa-build-on-109.diff  patch-qobjpriv-allow-older-versions.diff  patch-qtpaths-qspmode.diff  patch-qtscript_ceil.diff  patch-qttools-skip-assistant.diff  patch-qwe-examples-109.diff  patch-qwe-no-allocator-context.diff  patch-qwe-no-qobjpriv-dep-p0.diff  patch-qwe-no-sanitisation.diff  patch-qwe-nodebug-p2.diff  patch-qwv-build-on-109.diff  patch-qwv-use-apple-webkit.diff  patch-readable-selected-tab-109.diff  patch-respect-DontSwapCtrlMeta.diff  patch-sdk.prf-xcrun-not-for-compilers.diff  patch-shared.diff  patch-to-build-xcb.diff  (+8 more)
devel/: kdiff3.tar.bz2
graphics/: libepoxy
kde/: PortIndex  PortIndex.quick  kompare  libkomparediff2  loc_baloo-4.13.3.tar.bz2
kf5/kf5-kdevelop-translations-devel/files/: CMakeLists.txt
multimedia/: FFMpeg.251.tar.xz
(+4557 files in other folders)
