import("//build/config/sysroot.gni")
import("//build/toolchain/gcc_toolchain.gni")
gcc_toolchain("host") {
  cc = "__MACPORTS_CC__" 
  cxx = "__MACPORTS_CXX__" 
  ld = "__MACPORTS_CXX__" 
  ar = "/opt/local/bin/ar" 
  nm = "/opt/local/bin/nm" 
  toolchain_args = { 
    current_os = "linux" 
    current_cpu = "x64" 
    is_clang = false 
    use_gold = false 
  } 
}
gcc_toolchain("v8_snapshot") {
  cc = "__MACPORTS_CC__" 
  cxx = "__MACPORTS_CXX__" 
  ld = "__MACPORTS_CXX__" 
  ar = "/opt/local/bin/ar" 
  nm = "/opt/local/bin/nm" 
  toolchain_args = { 
    current_os = "linux" 
    current_cpu = "x64" 
    v8_current_cpu = "x64" 
    is_clang = false 
    use_gold = false 
  } 
 } 
gcc_toolchain("target") {
  cc = "__MACPORTS_CC__" 
  cxx = "__MACPORTS_CXX__" 
  ld = "__MACPORTS_CXX__" 
  ar = "/opt/local/bin/ar" 
  nm = "/opt/local/bin/nm" 
  toolchain_args = { 
    current_os = "linux" 
    current_cpu = "x64" 
    is_clang = false 
    use_gold = false 
  } 
}
